2008-03-19  Gabriel Burt  <gabriel.burt@gmail.com>

	Patch from Bertrand Lorentz porting the Bookmarks plugin.

	* build/build.environment.mk:
	* configure.ac:
	* src/Extensions/Banshee.Bookmarks/Banshee.Bookmarks.addin.xml:
	* src/Extensions/Banshee.Bookmarks/Banshee.Bookmarks.mdp:
	* src/Extensions/Banshee.Bookmarks/Banshee.Bookmarks/BookmarksService.cs:
	* src/Extensions/Banshee.Bookmarks/Makefile.am:
	* src/Extensions/Banshee.Bookmarks/Resources/BookmarksMenu.xml:
	* src/Extensions/Extensions.mds:
	* src/Extensions/Makefile.am: Port the Bookmarks plugin to trunk.

2008-03-19  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Query/BansheeQuery.cs:
	* src/Core/Banshee.Services/Banshee.Sources/Source.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui.Dialogs/TrackEditor.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui/PlaybackActions.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui/TrackActions.cs: Lots of 'song'
	to 'item' changes.

2008-03-19  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Core/Banshee.Streaming/StreamTagger.cs: Take the title
	from the filename if needed.

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/TrackInfoDisplay.cs:
	Display a video icon for missing video 'album art'.

	* src/Extensions/Banshee.NotificationArea/Banshee.NotificationArea/NotificationAreaService.cs:
	Change 'song' to 'item' in a few places.

2008-03-19  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Services/Banshee.PlaybackController/PlaybackControllerService.cs:
	Added a TrackStarted event that will always be raised, even if the 
	playback controller did not transition to the track, but most importantly
	it will _always_ be raised after the Transition event; this allows
	users to connect to both events to determine if the track that is 
	playing was manually played or not

	* src/Extensions/Banshee.NowPlaying/Banshee.NowPlaying/NowPlayingSource.cs:
	Activate the now playing source if the user manually started playing a